<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SummerDemo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="back">点击返回</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>

    <string name="dialog_hint"></string>
    <string name="download_start">开始下载啦</string>
    <string name="take_photo">拍照</string>
    <string name="choose_photo">选择</string>

    <string name="search_edi_hint">搜索样式</string>
    <string name="search">搜索</string>

    <string name="title1">通过城市名，从中国天气网取出该城市当天的温度与天气</string>
    <string name="title2">输入中文，点击 后朗读出来</string>
    <string name="sample_action">Set Alarm</string>
    <string name="title3">TextUtils的使用方法大全</string>
    <string name="title4">浮动窗口</string>
    <string name="title5">WebView</string>
    <string name="title6">播放音乐</string>
    <string name="title7">使用Html改变文字样式</string>
    <string name="title8">BroadcastReceiver跨Activity更新</string>
    <string name="title9">查询手机号码</string>
    <string name="title10">下载"我爱游戏"APP到手机</string>
    <string name="title11">获取存储卡的存储信息</string>
    <string name="title12">自定义多图选择页面</string>
    <string name="title13">发送数据到服务器</string>
    <string name="title14">垂直的ViewPager</string>
    <string name="toast_demo">Toast使用示例</string>
    <string name="picture_demo">图片的综合使用示例</string>
    <string name="mediaPlayer">播放声音示例</string>
    <string name="value_alpha">Alpha: %d\%</string>
    <string name="value_red">Red: %d\%</string>
    <string name="value_green">Green: %d\%</string>
    <string name="value_blue">Blue: %d\%</string>
    <string name="loading">正在加载…</string>
    <string name="test_string">哈哈%s</string>

    <!--用户设置-->
    <string name="mine_set_title">设置</string>
    <string name="mine_set_phone">手机号码</string>
    <string name="mine_set_push_msg">推送消息免打扰</string>
    <string name="mine_set_push_title">推送消息</string>
    <string name="mine_set_clear">清除缓存</string>
    <string name="mine_set_logout">退出登录</string>
    <string name="my_about">关于</string>

    <!--设置推送开关-->
    <string name="mine_set_push_open">开启</string>
    <string name="mine_set_push_open_night">夜间开启</string>
    <string name="mine_set_push_close">关闭</string>

    <!-- 首页 -->
    <string name="tab_view">UI</string>
    <string name="tab_course">教程</string>
    <string name="tab_module">模块</string>
    <string name="tab_mine">自定义</string>
    <string name="hint_empty_comment">请输入5个字以上内容</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="toast_no_empty">内容不能为空</string>

</resources>
